# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_sync/backend.gni")
import("$dir_pw_thread/backend.gni")

declare_args() {
  # Configures the backend to use for the //pw_async2_for_test facade
  if (host_os == "linux" && current_os == "linux") {
    pw_async2_DISPATCHER_FOR_TEST_BACKEND =
        "$dir_pw_async2:epoll_dispatcher_for_test"
  } else if (pw_sync_THREAD_NOTIFICATION_BACKEND != "" &&
             pw_sync_INTERRUPT_SPIN_LOCK_BACKEND != "" &&
             pw_thread_SLEEP_BACKEND != "") {
    pw_async2_DISPATCHER_FOR_TEST_BACKEND =
        "$dir_pw_async2:basic_dispatcher_for_test"
  } else {
    pw_async2_DISPATCHER_FOR_TEST_BACKEND = ""
  }
}
