# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_unit_test/test.gni")

config("public_include_path") {
  include_dirs = [ "public" ]
  visibility = [ ":*" ]
}

pw_source_set("pw_async2_epoll") {
  public_configs = [ ":public_include_path" ]
  public_deps = [
    "$dir_pw_async2:dispatcher",
    "$dir_pw_async2:poll",
    dir_pw_assert,
    dir_pw_status,
  ]
  deps = [ dir_pw_log ]
  public = [ "public/pw_async2_epoll/dispatcher.h" ]
  sources = [ "dispatcher.cc" ]
}

config("dispatcher_for_test_public_include_path") {
  include_dirs = [ "dispatcher_for_test_public_overrides" ]
  visibility = [ ":*" ]
}

pw_source_set("dispatcher_for_test") {
  public_configs = [ ":dispatcher_for_test_public_include_path" ]
  public = [ "dispatcher_for_test_public_overrides/pw_async2_backend/native_dispatcher_for_test.h" ]
  public_deps = [ ":pw_async2_epoll" ]
}

pw_test_group("tests") {
}
